added some unit9 content

--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,8 @@
                     <div class="spacer"></div>
                     <div class="inner">
                         <h1>Smirnoff: Yours for The Making</h1>
-                        <p class='description'>Django based REST API powering a Flash frontend.</p>
-                        <p class='description'>Interesting deployment strategy resulted in a CDN only public facing interface.</p>
+                        <p class='description'>Django based REST API.</p>
+                        <p class='description'>Hosting architecture centred around CMS generated data snapshots deployed on a CDN.</p>
                         <p class='tags'>[Python][Django][Devops]</p>
                         <p class='link'><a href='http://www.youtube.com/user/Smirnoffeurope'>youtube.com/user/Smirnoffeurope</a></p>
                         <p class='employer'>Built at Pirata</p>
@@ -101,7 +101,7 @@
                     <div class="inner">
                         <h1>Bali Temple Explorer</h1>
                         <p class='description'>Interactive documentary.</p>
-                        <p class='tags'>[AS3]</p>
+                        <p class='tags'>[AS3][Tech Lead]</p>
                         <p class='link'><a href="http://www.balitempleexplorer.com/">balitempleexplorer.com</a> | <a href="http://www.unit9.com/project/the-bali-temple-explorer">Project overview</a></p>
                         <p class='employer'>Built at Unit9</p>
                     </div>
@@ -112,7 +112,7 @@
                     <div class="inner">
                         <h1>Glennfiddich Warehouse</h1>
                         <p class='description'>Interactive virtual tour.</p>
-                        <p class='tags'>[AS3]</p>
+                        <p class='tags'>[AS3][Tech Lead]</p>
                         <p class='link'><a href="http://www.unit9.com/project/glenfiddich-slumbering-warehouse">Project overview</a></p>
                         <p class='employer'>Built at Unit9</p>
                     </div>
@@ -122,9 +122,20 @@
                     <div class="spacer"></div>
                     <div class="inner">
                         <h1>Heineken Know The Signs</h1>
-                        <p class='description'>Video heavy site with an interesting on-screen controls.</p>
+                        <p class='description'>Video heavy site with an interesting UI controls.</p>
                         <p class='tags'>[AS3]</p>
                         <p class='link'><a href="http://www.unit9.com/project/know-the-signs">Project overview</a></p>
+                        <p class='employer'>Built at Unit9</p>
+                    </div>
+                </article>
+                <div class="sep">※</div>
+                <article>
+                    <div class="spacer"></div>
+                    <div class="inner">
+                        <h1>Pepsi Max It Legends</h1>
+                        <p class='description'>Video based website for a long running competition.</p>
+                        <p class='tags'>[AS3][Tech Lead]</p>
+                        <p class='link'><a href="http://www.unit9.com/project/pepsi-max-it-legends">Project overview</a></p>
                         <p class='employer'>Built at Unit9</p>
                     </div>
                 </article>
@@ -136,6 +147,7 @@
         <footer>
             <div class="inner">
                 <div class="social">
+                    <a href="mailto:garcez.sergio@gmail.com">Email</a>
                     <a href="https://twitter.com/sgarcez">Twitter</a>
                     <a href="https://github.com/sgarcez/">Github</a>
                     <a href="http://www.flickr.com/photos/delano_mutella/">Flickr</a>
