--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <body>
         <div class="page">
             <header>
-              <h1>Hi! I'm <span>Sergio Garcez</span>.</h1>
+              <h1>Hi, I'm <span>Sergio Garcez</span>.</h1>
               <h2>I'm a developer. Below is some of my work.</h2>
             </header>
 
@@ -141,7 +141,7 @@
                 </article>
                 <div class="sep">Ω</div>
             </div>
-        
+
         </div>
 
         <footer>
@@ -153,9 +153,10 @@
                     <a href="http://www.flickr.com/photos/delano_mutella/">Flickr</a>
                 </div>
                 <div class="bio">
-                    <p>I am full stack Web Developer working in London since 2008.</p>
-                    <p>I have worked at <a href="http://www.unit9.com">Unit9</a> where I helped develop award winning interactive projects, mainly in AS3.
-                    <p>Currently I'm working at <a href="http://www.piratalondon.com">Pirata</a> as a Senior Web Developer, specialising in Python, Devops and Backbone.js.</p>
+                    <p>I am a full stack Web Developer working in
+                    London.</p>
+                    <p>In 2008 I joined <a href="http://www.unit9.com">Unit9</a> to help develop award winning interactive projects.
+                    <p>More recently, at <a href="http://www.piratalondon.com">Pirata</a>, I specialized in Python, Devops and Backbone.js.</p>
                     <p></p>
                 </div>
             </div>
