quick copy update

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <div class="page">
             <header>
               <h1>Hi, I'm <span>Sergio Garcez</span>.</h1>
-              <h2>I'm a developer. Below is some of my work.</h2>
+              <h2>I write software. Below is some of my work.</h2>
             </header>
 
             <div class="content">
@@ -155,8 +155,8 @@
                 <div class="bio">
                     <p>I am a full stack Web Developer working in
                     London.</p>
-                    <p>In 2008 I joined <a href="http://www.unit9.com">Unit9</a> to help develop award winning interactive projects.
-                    <p>More recently, at <a href="http://www.piratalondon.com">Pirata</a>, I specialized in Python, Devops and Backbone.js.</p>
+                    <p>Having previously worked at <a href="http://www.unit9.com">Unit9</a> and <a href="http://www.piratalondon.com">Pirata London</a></p>
+                    <p>I now build data driven systems at <a href="http://sme.sh">Smesh</a></p>
                     <p></p>
                 </div>
             </div>
