--- a/personal-holding-page/index.html
+++ b/personal-holding-page/index.html
@@ -15,10 +15,11 @@
                 min-height:100%;
             }
             body {
-                background: url(_gold_lum<hue_1080.jpg) no-repeat center center fixed;
+                /* background: url(_gold_lum<hue_1080.jpg) no-repeat center center fixed; */
                 background-size: cover;
-                background-color:#383022;
-                color: #c48817;
+                background-color:#1d1d1d;
+                /* color: #c48817; */
+                color: #504e4b;
                 font-family: monospace;
                 margin: 20px;
                 min-height: 100%;
@@ -35,13 +36,11 @@
     <body>
         <div>
             <p class='title'>Sergio Garcez</p>
-            <p>London based freelance Software Developer [py/go/js]</p>
-            <p>Distributed Systems | ETL Systems | Knowledge Graph Systems | ML</p>
-            <p>Adtech | Fintech | Creative</p>
-            <p>Previously at <a href="http://afternoonify.com">Afternoonify</a>, <a href="http://sme.sh">Smesh</a>, <a href="http://www.unit9.com">Unit9</a> and <a href="https://twitter.com/piratalondon">Pirata London</a></p>
-            <a href="https://twitter.com/sgarcez">Twitter</a>
-            <a href="https://github.com/sgarcez/">Github</a>
-            <a href="https://www.linkedin.com/in/sgarcez/">Linkedin</a>
+            <p>Software Engineer</p>
+            <p>London</p>
+            <a href="https://github.com/sgarcez">Github</a>
+            <a href="https://sgarcez.medium.com">Medium</a>
+            <a href="https://www.linkedin.com/in/sgarcez">Linkedin</a>
             <a href="mailto:contact@sergiogarcez.com">Email</a>
         </div>
 
